Strengthen testIncorrectHeaderHandling (#86886)
Enhances this test to cover more combinations of present/absent headers,
and makes the fake REST request immutable to align it with the
production implementation.